<resources>
    <string name="app_name">I\'m Laundry</string>

    <!-- Menu drawer-->
    <string name="menu_album">Album</string>
    <string name="menu_genre">Genre</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_bag">Mi bolsa</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_orders">Mis pedidos</string>
    <string name="menu_branches">Sucursales</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="navigation_drawer_open">Menú lateral abierto</string>
    <string name="navigation_drawer_close">Menú lateral cerrado</string>


    <!-- Login -->
    <string name="login_title">Iniciar sesión</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forgot">¿Olvidaste tú contraseña?</string>
    <string name="login_signup">¿Aún no tienes cuenta? ¡Registrate!</string>

    <string name="add_to_bag">Añadir a la bolsa</string>

    <!-- Product details strings-->
    <string name="product_description">Descripción del producto</string>

    <!-- Package details strings-->
    <string name="package_description">Descripción del paquete</string>

    <!-- Purchasables -->
    <string name="packages">Paquetes</string>
    <string name="garments">Prendas</string>
    <string name="add">Añadir</string>
    <string name="remove">Remover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Orders-->
    <string name="order">Pedido #</string>
    <string name="status">Estatus:</string>
    <string name="washer_description">Imagen de una lavadora</string>
    <string name="signup_names">Nombre(s)</string>
    <string name="signup_last_name">Apellido(s)</string>
    <string name="signup_phone">Teléfono</string>
    <string name="signup_address">Domicilio</string>
    <string name="signup_cancel">Cancelar</string>
    <string name="signup_signup">Registrarse</string>
    <string name="signup_email">Correo electrónico</string>
    <string name="signup_password">Contraseña</string>
    <string name="signup_continue">Continuar</string>


    <!-- Payment methods-->
    <string name="card_method">Con tarjeta</string>
    <string name="other_methods">Con otras formas de pago</string>
    <string name="paypal">PayPal</string>
    <string name="cash">Efectivo</string>
    <string name="new_card">Nueva tarjeta</string>
    <string name="add_new_card">Agregar nueva tarjeta</string>
    <string name="continue_with_payment">Continuar con el pago</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="card_number_hidden">XXXX XXXX XXXX XXXX</string>
    <string name="expiration_date">Expiración</string>
    <string name="cvv">CVV / CVC</string>
    <string name="card_type">Tipo de tarjeta</string>
    <string name="back">Regresar</string>
    <string name="finish">Finalizar</string>
    <string name="date_format">MM/YY</string>
    <string name="select_option">Seleccione una opción</string>
    <string name="add_card_button">Agregar</string>

</resources>