<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home_24"
            android:iconTintMode="src_in"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_item_search"
            android:icon="@drawable/ic_search_24"
            android:title="@string/menu_search" />

        <item android:id="@+id/nav_item_branches"
            android:icon="@drawable/ic_map_24"
            android:title="@string/menu_branches" />
    </group>

    <group>
        <item android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/menu_profile" />

        <item android:id="@+id/nav_item_bag"
            android:icon="@drawable/ic_shopping_bag_24"
            android:title="@string/menu_bag" />

        <item android:id="@+id/nav_item_orders"
            android:icon="@drawable/ic_receipt_24"
            android:title="@string/menu_orders" />
    </group>

    <group>

        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/menu_logout" />

    </group>

</menu>
