<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idOrderFrameLayoutCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CardViewOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imgViewOrder"
                android:layout_width="91dp"
                android:layout_height="89dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/washer_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/washer"
                tools:srcCompat="@drawable/washer" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgViewOrder"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtViewOrderNumber"
                    style="@style/Widget.AppCompat.TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/order" />

                <TextView
                    android:id="@+id/txtViewOrderDate"
                    style="@style/Widget.AppCompat.TextView.Price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2022/10/21" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtViewOrderStatus"
                style="@style/Widget.AppCompat.TextView.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/status"
                app:layout_constraintStart_toEndOf="@+id/imgViewOrder"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/txtViewOrderStatusContent"
                style="@style/Widget.AppCompat.TextView.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="En proceso"
                app:layout_constraintStart_toEndOf="@+id/txtViewOrderStatus"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgViewOrder"
                app:layout_constraintTop_toBottomOf="@+id/txtViewOrderStatus">

                <ProgressBar
                    android:id="@+id/progressBarOrderStatus"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:progress="40"
                    android:progressBackgroundTint="@color/progress_background_color"
                    android:progressTint="@color/secondary_color"
                    android:scaleY="3" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>